# lectern

./: .gitignore  APPDIRECTORY.md  AppImageBuilder.yml  Cargo.toml  Cargo.toml.backup  Lectern.qmlproject  Lectern.qmlproject.qtds  MIGRATION.md  QUICKSTART.md  README.md  REFACTOR_UI_MOD.md  STATUS.md  build_lectern.sh  build_log_debug_methods_2.txt  build_log_debug_methods_3.txt  build_log_debug_methods_4.txt  build_log_test_scan.txt  build_log_verify_revert.txt  cargo_error.txt  check_out.txt  check_output.txt  drag_n_drop_issue.md  lectern.desktop  lectern.md  liberation-fonts-all-2.1.5-14.fc43.noarch.rpm  liberation-sans-fonts-2.1.5-14.fc43.noarch.rpm  main.qml  match.md  qtquickcontrols2.conf  refactor.md  run_lectern.sh  run_lectern_windows.sh  run_lectern_x11.sh  setup_ffmpeg_wine.sh  test_qt.cpp
.cargo/: config.toml
.github/workflows/: build-appimage.yml  build-windows.yml
assets/css/: breeze_dark.css  candy_dark.css  candy_light.css  nord_drak.css
assets/fonts/: README.md
assets/png/: README.md
docs/: naming.md
issue/: issues.md
issues/: chapter_management.md  conversion_to_m4b.md  issues.md
packaging/: lectern_x11_wrapper.c
prompts/: IMPLEMENTATION_PLAN.md  lectern_iced.md
qml/: ChaptersTab.qml  Constants.qml  ConvertTab.qml  CoverTab.qml  MetadataTab.qml  SearchResultsDialog.qml  main.qml  qmldir
src/: app_event.rs  bridge.rs  bridge_impl.rs  config.rs  main.rs  main.rs.backup  playback.rs  player.rs  services.rs
src/models/: chapter.rs.old  chapters.rs  metadata.rs  mod.rs  project.rs  settings.rs
src/services/: conversion.rs  ffprobe.rs  playback.rs
src/ui/: colors.rs  cover_search.rs  dialogs.rs  helpers.rs  icons.rs  mod.rs  settings.rs  style.css  theme_settings.rs  window.rs
src/ui/handlers/: chapters.rs  convert.rs  cover.rs  file.rs  metadata.rs  mod.rs  navigation.rs  search.rs  settings.rs
src/ui/pages/: drop_zone.rs  editor.rs  mod.rs
src/ui/state/: chapter_state.rs  cover_state.rs  file_state.rs  metadata_state.rs  mod.rs  search_state.rs
src/ui/theme/: breeze.rs  candy.rs  mod.rs  nordic.rs  styles.rs  windows11.rs
src/ui/views/: chapters.rs  convert.rs  cover.rs  metadata.rs  mod.rs  search.rs  settings.rs
src/utils/: chapter_file.rs  format.rs  mod.rs  time.rs
