[package]
name = "lectern"
version = "0.1.0"
edition = "2021"

[dependencies]
# QML/Qt bindings
qmetaobject = "0.2"
cstr = "0.2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Error handling
anyhow = "1.0"

# File system
dirs = "5.0"

# Text processing
regex = "1.10"
urlencoding = "2.1"

# URL handling
url = "2.5"

# Audio processing (if needed)
# ffmpeg-next = "6.0"  # Uncomment if using FFmpeg bindings

[build-dependencies]
# Required for qmetaobject
qmetaobject = "0.2"