[package]
name = "lectern"
version = "0.1.0"
edition = "2021"

[dependencies]
# Pure Rust GUI
iced = { version = "0.12", features = ["image"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Error handling
anyhow = "1.0"

# File system
dirs = "5.0"
rfd = "0.14"
futures = "0.3"

# Text processing
regex = "1.10"
urlencoding = "2.1"

# URL handling
url = "2.5"

# Audio processing (if needed)
# ffmpeg-next = "6.0"  # Uncomment if using FFmpeg bindings

# Image handling
image = "0.25"