[package]
name = "lectern"
version = "0.1.0"
edition = "2021"

[profile.release]
# Optimize for smaller binary (GUI app doesn't need max speed)
strip = true
lto = "thin"
codegen-units = 1
opt-level = "z"     # Size over speed
panic = "abort"     # No unwinding → smaller binary

[dependencies]
# Pure Rust GUI
iced = { version = "0.12", features = ["image", "tokio", "canvas"] }
iced_renderer = { version = "0.12", features = ["geometry"] }

# Async runtime (only features we use: runtime, sync, process, time, io-util)
tokio = { version = "1", features = ["rt-multi-thread", "sync", "process", "time", "io-util", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Error handling
anyhow = "1.0"

# File system
dirs = "5.0"
rfd = "0.14"
futures = "0.3"

# Text processing
regex = "1.10"
urlencoding = "2.1"

# URL handling
url = "2.5"

# Audio processing (if needed)
# ffmpeg-next = "6.0"  # Uncomment if using FFmpeg bindings

# Image handling
image = "0.25"

# Temporary file management
tempfile = "3.10"